# imager-viewer

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  COPYRIGHT  FEATURES.md  README.md  build.bat  build.ps1  build.py  build.sh  dev-setup.sh  imageviewer.manifest  imageviewer.spec  install-binary.sh  install.bat  install.ps1  install.py  install.sh  main.py  package.json  pyproject.toml  release.ps1  release.sh  run-tests.sh  wrangler.toml
cloudflare/: .gitignore  README.md  installer.js  worker.js  wrangler.toml
scripts/: build.bat  build.py  build.sh  deploy-worker.sh  install-binary.bat  install-binary.sh  installer.ps1  installer.sh  release.sh  web-install.ps1  web-install.sh
src/: __init__.py  calculate_max_zoom.py  display_image.py  handle_pan.py  handle_zoom.py  image_downloader.py  image_metadata.py  image_viewer.py  main.py  metadata.py  on_resize.py  update_cursor_info.py  zoom_helper.py  zoom_in.py  zoom_out.py
src/services/: gemini_image_service.py
