[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "imageviewer"
version = "0.1.0"
authors = [
  { name="Akshat Kotpalliwar", email="akshatkot@gmail.com" }
]
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pillow>=12.0.0",
    "psutil>=7.1.3",
    "pyinstaller>=6.16.0",
]
license = { text = "GPL-3.0-only" }
classifiers = [
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[tool.pyinstaller]
workpath = "build"
distpath = "dist"

[tool.pyinstaller.imageviewer]
script = "main.py"
onefile = true
noconsole = true
